crates/keron-lang/tests/corpus/errors/parse/double_literal_out_of_range.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: double literal is out of range
  --> 1:17
  |
1 | val x: Double = 999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999.0
  |                 ^
